+ squashed moving buttons css bug

--- a/React_CC/src/components/tic_tac_toe/styles.css
+++ b/React_CC/src/components/tic_tac_toe/styles.css
@@ -6,6 +6,18 @@
     margin-top: 10px;
 }
 
+button{
+
+    float: left;
+    font-size: 40px;
+    height: 100px;
+    padding: 0px;
+    text-align: center;
+    width: 100px;
+
+}
+
+
 
 button:hover{
     background-color: #141414;
